# home-automation

./: .envrc  .gitignore  .gitmodules  Readme.md  flake.nix  fnordlicht.py  light_strip.py  pyproject.toml  requirements.txt  shell.nix  tradfri_bridge.py
nix/: configuration.nix  python-package.nix
src/home_automation/: fnordlicht.py  light_strip.py  tradfri_bridge.py
